# bhook

./: README.md  build.gradle  gradle.properties  settings.gradle
hiaihook/: build.gradle
hiaihook/src/androidTest/java/com/huawei/itrustee/hiaihook/: ExampleInstrumentedTest.java
hiaihook/src/main/: AndroidManifest.xml
hiaihook/src/main/java/com/huawei/itrustee/hiaihook/: MyCustomApplication.java
hiaihook/src/main/java/com/huawei/itrustee/hiaihook/adapter/: ClassifyAdapter.java
hiaihook/src/main/java/com/huawei/itrustee/hiaihook/bean/: ClassifyItemModel.java  ModelInfo.java
hiaihook/src/main/java/com/huawei/itrustee/hiaihook/utils/: Constant.java  ModelManager.java  ModelManagerListener.java  Untils.java
hiaihook/src/main/java/com/huawei/itrustee/hiaihook/view/: AsyncClassifyActivity.java  ClassifyActivity.java  CustomToast.java  NativeHacker.java  NativeHookee.java  NpuClassifyActivity.java  SyncClassifyActivity.java
hiaihook/src/main/jni/: Android.mk  Application.mk  CMakeLists.txt  hacker.c  mix_classify_async_jni.cpp  mix_classify_jni.cpp  mixbuildmodel.cpp  relocation.cpp
hiaihook/src/main/jni/include/: HIAIMixModel.h
hiaihook/src/main/res/layout/: activity_classify.xml  activity_main.xml  classify_item.xml  classify_layout.xml  recyclerview_hewader.xml
hiaihook/src/main/res/values/: colors.xml  strings.xml  styles.xml
hiaihook/src/main/res/values-zh/: strings.xml
hiaihook/src/test/java/com/huawei/itrustee/hiaihook/: ExampleUnitTest.java
